--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,6 @@
 @import "./nes.min.css";
 @import "./fonts/Press_Start_2P.css";
-
+@import "./animations.css";
 
 * {
     box-sizing: border-box;
@@ -22,26 +22,4 @@
 }
 .ml-2 {
     margin-left: 2em;
-}
-
-.pulse-animation {
-    animation-name: pulse;
-    animation-duration: 0.8s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-}
-
-
-@keyframes pulse {
-    from {
-        transform: scale(1, 1);
-    }
-
-    50% {
-        transform: scale(1.2, 1.2);
-    }
-
-    to {
-        transform: scale(1);
-    }
 }
